force-app/main/default/objects/Key_Result__c/Key_Result__c.object-meta.xml
<CustomObject>
    <description>Key Results built out under objectives</description>
    <label>Key Result</label>
    <nameField>
        <label>Key Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>