force-app/main/default/objects/Key_Result__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Completion Date of Key Result</description>
    <inlineHelpText>Completion Date of Key Result</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>