force-app/main/default/objects/Key_Result__c/fields/Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent__c</fullName>
    <description>What percent of complete is this Key Result?</description>
    <inlineHelpText>What percent of complete is this Key Result?</inlineHelpText>
    <label>Completion Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>