force-app/main/default/objects/Key_Result__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes on Key Result.</description>
    <inlineHelpText>Notes on Key Result.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>