force-app/main/default/objects/Key_Result__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Objective that this KR impacts.</description>
    <inlineHelpText>Objective that this KR impacts.</inlineHelpText>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Key Results</relationshipLabel>
    <relationshipName>Key_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>