force-app/main/default/objects/Key_Result__c/fields/Result_Owner__c.field-meta.xml
<CustomField>
    <fullName>Result_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ubiquity Employee responsible for Key Result.</description>
    <inlineHelpText>Ubiquity Employee responsible for Key Result.</inlineHelpText>
    <label>Result Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Result owner must have the ubiquity employee record type</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ubiquity Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Results</relationshipLabel>
    <relationshipName>Key_Results</relationshipName>
    <type>Lookup</type>
</CustomField>