force-app/main/default/objects/Key_Result__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of Key Result</description>
    <inlineHelpText>Start Date of Key Result</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>